Making sure that only the head of the residuals table is displayed (regardless of VSCode settings)

--- a/Ex1YoavYoscovich.ipynb
+++ b/Ex1YoavYoscovich.ipynb
@@ -1112,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1234,7 +1234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1306,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1332,7 +1332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1361,7 +1361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1393,7 +1393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1428,7 +1428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1469,7 +1469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1487,7 +1487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1539,7 +1539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1561,7 +1561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1591,7 +1591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -2176,7 +2176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -2237,44 +2237,37 @@
        "      <td>941.259949</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
+       "      <th>171028</th>\n",
+       "      <td>398.452148</td>\n",
+       "      <td>6056</td>\n",
+       "      <td>5657.547852</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>166020</th>\n",
-       "      <td>276.542480</td>\n",
-       "      <td>5556</td>\n",
-       "      <td>5279.457520</td>\n",
+       "      <th>35317</th>\n",
+       "      <td>30.016907</td>\n",
+       "      <td>832</td>\n",
+       "      <td>801.983093</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>163795</th>\n",
-       "      <td>0.902832</td>\n",
-       "      <td>5068</td>\n",
-       "      <td>5067.097168</td>\n",
+       "      <th>114020</th>\n",
+       "      <td>-38.767334</td>\n",
+       "      <td>2184</td>\n",
+       "      <td>2222.767334</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>200352</th>\n",
-       "      <td>-556.884766</td>\n",
-       "      <td>16433</td>\n",
-       "      <td>16989.884766</td>\n",
+       "      <th>20222</th>\n",
+       "      <td>23.001343</td>\n",
+       "      <td>732</td>\n",
+       "      <td>708.998657</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>32163</th>\n",
-       "      <td>-25.149841</td>\n",
-       "      <td>838</td>\n",
-       "      <td>863.149841</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>162363</th>\n",
-       "      <td>410.086426</td>\n",
-       "      <td>5149</td>\n",
-       "      <td>4738.913574</td>\n",
+       "      <th>39535</th>\n",
+       "      <td>-95.519653</td>\n",
+       "      <td>880</td>\n",
+       "      <td>975.519653</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>43941 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -2284,17 +2277,14 @@
        "168079   141.946777        5400      5258.053223\n",
        "194940  1173.617188       12893     11719.382812\n",
        "58944     32.740051         974       941.259949\n",
-       "...             ...         ...              ...\n",
-       "166020   276.542480        5556      5279.457520\n",
-       "163795     0.902832        5068      5067.097168\n",
-       "200352  -556.884766       16433     16989.884766\n",
-       "32163    -25.149841         838       863.149841\n",
-       "162363   410.086426        5149      4738.913574\n",
-       "\n",
-       "[43941 rows x 3 columns]"
+       "171028   398.452148        6056      5657.547852\n",
+       "35317     30.016907         832       801.983093\n",
+       "114020   -38.767334        2184      2222.767334\n",
+       "20222     23.001343         732       708.998657\n",
+       "39535    -95.519653         880       975.519653"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2307,7 +2297,7 @@
     "residuals_table['Real Price'] = y_test\n",
     "residuals_table['Predicted Price'] = prediction\n",
     "residuals_table['Residuals'] = residuals\n",
-    "residuals_table\n"
+    "residuals_table.head(10)\n"
    ]
   },
   {
